# ARX_R5_Pro

ARX_CAN/: arx_can.rules
ROS/ARX_R5Pro_Remote_SDK_ROS/: arx_can.rules
ROS/ARX_R5Pro_Remote_SDK_ROS/follow/: CMakeLists.txt
ROS/ARX_R5Pro_Remote_SDK_ROS/follow/src/: arx.cpp
ROS/R5_Pro_ws/src/ARX_R5Pro_ros/arx_r5pro_controller/: CMakeLists.txt  package.xml
ROS/R5_Pro_ws/src/ARX_R5Pro_ros/arx_r5pro_controller/include/arx_r5pro_controller/: KeyBoard.hpp  R5ProController.hpp  R5ProControllerVr.hpp
ROS/R5_Pro_ws/src/ARX_R5Pro_ros/arx_r5pro_controller/launch/: open_aloha.launch  open_double_arm.launch  open_keyboard_control.launch  open_remote_master.launch  open_remote_slave.launch  open_single_arm.launch  open_vr_double_arm.launch  open_vr_single_arm.launch
ROS/R5_Pro_ws/src/ARX_R5Pro_ros/arx_r5pro_controller/src/: KeyBoard.cpp  R5ProController.cpp  R5ProControllerVr.cpp
ROS/R5_Pro_ws/src/ARX_R5Pro_ros/arx_r5pro_description/: CMakeLists.txt  package.xml
ROS/R5_Pro_ws/src/ARX_R5Pro_ros/arx_r5pro_description/launch/: l5pro.launch.py
ROS/R5_Pro_ws/src/ARX_R5Pro_ros/arx_r5pro_description/model/meshes/: arm_left_catch.stl  arm_link1.stl  arm_link2.stl  arm_link4.stl  arm_link5.stl  arm_link6.stl  arm_right_catch.stl
ROS/R5_Pro_ws/src/ARX_R5Pro_ros/arx_r5pro_description/model/urdf/: L5Pro.urdf
ROS/R5_Pro_ws/src/ARX_R5Pro_ros/arx_r5pro_description/model/usd/: test_env.usd
ROS/R5_Pro_ws/src/ARX_R5Pro_ros/arx_r5pro_description/model/xacro/: L5Pro.xacro  L5Pro_base.xacro  materials.xacro
ROS/R5_Pro_ws/src/ARX_R5Pro_ros/arx_r5pro_msg/: CMakeLists.txt  package.xml
ROS/R5_Pro_ws/src/arx_r5_ros/arx_r5_controller/include/arx_r5_controller/: R5Controller.hpp
ROS/R5_Pro_ws/src/arx_r5_ros/arx_r5_controller/launch/: open_vr_double_arm.launch
ROS/R5_Pro_ws/src/arx_r5_ros/arx_r5_controller/src/: R5Controller.cpp
ROS2/ARX_R5Pro_Remote_SDK_ROS2/: arx_can.rules
ROS2/ARX_R5Pro_Remote_SDK_ROS2/arx_msgs/: CMakeLists.txt  package.xml
ROS2/ARX_R5Pro_Remote_SDK_ROS2/follow/: CMakeLists.txt  package.xml
ROS2/ARX_R5Pro_Remote_SDK_ROS2/follow/launch/: follow.launch.xml
ROS2/ARX_R5Pro_Remote_SDK_ROS2/follow/src/: arx.cpp
ROS2/ARX_R5Pro_Remote_SDK_ROS2/master/: CMakeLists.txt  package.xml
ROS2/ARX_R5Pro_Remote_SDK_ROS2/master/launch/: master.launch.xml
ROS2/ARX_R5Pro_Remote_SDK_ROS2/master/src/: arx.cpp
ROS2/R5_Pro_ws/src/ARX_R5Pro_ros2/arx_r5pro_controller/: CMakeLists.txt  package.xml
ROS2/R5_Pro_ws/src/ARX_R5Pro_ros2/arx_r5pro_controller/config/: aloha_arm.yaml  single_arm.yaml  vr_single_arm.yaml
ROS2/R5_Pro_ws/src/ARX_R5Pro_ros2/arx_r5pro_controller/include/arx_r5pro_controller/: KeyBoard.hpp  R5ProController.hpp  R5ProControllerVr.hpp
ROS2/R5_Pro_ws/src/ARX_R5Pro_ros2/arx_r5pro_controller/launch/: open_aloha.launch.py
ROS2/R5_Pro_ws/src/ARX_R5Pro_ros2/arx_r5pro_controller/src/: KeyBoard.cpp  R5ProController.cpp  R5ProControllerVr.cpp
ROS2/R5_Pro_ws/src/ARX_R5Pro_ros2/arx_r5pro_msg/: CMakeLists.txt  package.xml
ROS2/R5_Pro_ws/src/ARX_R5Pro_ros2/tools/: R5.sh  key.sh
ROS2/R5_Pro_ws/src/ARX_R5_ros2/arx_r5_controller/: CMakeLists.txt  package.xml
ROS2/R5_Pro_ws/src/ARX_R5_ros2/arx_r5_controller/include/arx_r5_controller/: R5Controller.hpp
ROS2/R5_Pro_ws/src/ARX_R5_ros2/arx_r5_controller/launch/: open_aloha.launch.py
ROS2/R5_Pro_ws/src/ARX_R5_ros2/arx_r5_controller/src/: R5Controller.cpp
py/ARX_R5Pro_python/: .gitignore  setup.sh  test_keyboard.py
py/ARX_R5Pro_python/bimanual/: CMakeLists.txt
py/ARX_R5Pro_python/bimanual/api/arx_r5pro_src/include/arx_r5pro_src/interfaces/: InterfacesPy.hpp
py/ARX_R5Pro_python/bimanual/script/: single_arm.py
py/ARX_R5Pro_python/bimanual/src/: single_arm_interface.cpp
