<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>arx_r5pro_description</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="evencewu@outlook.com">evencewu</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
</package>
